--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@
     </div>
     <div id="panelProductos" class="panel">
         <h1>PRODUCTOS</h1>
+        <div>
+            <label for="txtNombreProducto"> Nombre:</label>
+            <input id="txtNombreProducto">
+        </div>
+        <div>
+            <label for="txtPrecioProducto"> Precio:</label>
+            <input id="txtPrecioProducto">
+        </div>
+        <div>
+            <label for="selectCategoria"> Categoria:</label>
+            <select id="selectCategoria">
+            <option  >Sin Categoria </option>
+        </select>
+        </div>
+        <div id="listaProductos"></div>
         <button class="btnAtras">atras</button>
     </div>
     <div id="panelCategorias" class="panel">
