Manejor de archivos

--- a/index.html
+++ b/index.html
@@ -6,12 +6,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ventas</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="modal.css">
+
+    <script defer src="config.js"></script>
+    <script defer src="db.js"></script>
     <script defer src="categorias.js"></script>
     <script defer src="main.js"></script>
-    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+    <div>
+        <div onclick="abrirModalConfig()">Config</div>
+    </div>
     <div id="panelHome" class="panel">
         <button onclick="mostrarPanelProductos()"> Productos </button>
         <button onclick="mostrarPanelCategorias()"> Categorias </button>
@@ -47,6 +54,24 @@
     <div id="panelVentas" class="panel">
         <h1>VENTAS</h1>
         <button class="btnAtras">atras</button>
+    </div>
+    <!-- Modals-->
+    <div>
+        <div id="modalConfig" class="modal">
+            <div class="modal-content">
+                <span class="close">&times;</span>
+                <!-- Select Color BG -->
+                <label for="bgColor">Color de fondo</label>
+                <select id="bgColor">
+                    <option>white</option>
+                    <option>red</option>
+                    <option>blue</option>
+                    <option value="darkgrey">black</option>
+                </select>
+                <!-- File DB-->
+                <input type="file" id="fileDB" accept=".json">
+            </div>
+        </div>
     </div>
 </body>
 
